gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23626a.d
version https://git-lfs.github.com/spec/v1
oid sha256:742bc9631fdb6e3af62c2f76ee8bded191bfc5c403fecf292923b6bb633f36ed
size 759
